<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2026 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:title="@string/charging_control_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="charging_control_enabled"
        android:title="@string/charging_control_title"
        android:defaultValue="true" />

    <PreferenceCategory
        android:key="charging_control_category_settings"
        android:title="@string/charging_control_mode_title">

        <SeekBarPreference
            android:key="charging_control_limit"
            android:title="@string/charging_control_limit_title"
            android:summary="@string/charging_control_limit_summary"
            android:defaultValue="80"
            android:max="100"
            settings:min="60"
            settings:seekBarIncrement="5"
            settings:showSeekBarValue="true" />

        <SwitchPreferenceCompat
            android:key="charging_control_bypass"
            android:title="@string/fastcharge_bypass_title"
            android:summary="@string/fastcharge_bypass_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="charging_control_category_advanced"
        android:title="@string/charging_control_advanced_title">

        <ListPreference
            android:key="charging_control_reset_limit"
            android:title="@string/charging_control_reset_limit_title"
            android:summary="%s"
            android:entries="@array/charging_control_reset_limit_entries"
            android:entryValues="@array/charging_control_reset_limit_values"
            android:defaultValue="5" />

        <ListPreference
            android:key="charging_control_reset_time"
            android:title="@string/charging_control_reset_time_title"
            android:summary="%s"
            android:entries="@array/charging_control_reset_time_entries"
            android:entryValues="@array/charging_control_reset_time_values"
            android:defaultValue="120" />

    </PreferenceCategory>

</PreferenceScreen>
